--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,10 @@
 <H1>THIS IS THE HOMEPAGE </H1>
 
-{{foreach}}
+{{#each categories as |category|}}
+    <div class='dish col-md-5'>
+      <p>
+        {{category.id}}.
+        {{category.name}}
+      </p>
+    </div>
+  {{/each}}
