modified homepage view, login view, signup view

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,20 +1,25 @@
-   <div class="container">
+<div class="item-cards-container">
+  <div class="">
     <h1 class="title is-1">Login</h1>
-   <form class="box">
-  <div class="field">
-    <label class="label">Email</label>
-    <div class="control">
-      <input class="input" type="email" placeholder="e.g. alex@example.com">
-    </div>
-  </div>
+    <br>
+    <form class="box">
+      <div class="field">
+        <label class="label">Email</label>
+        <div class="control">
+          <input class="input" type="email" placeholder="e.g. alex@example.com">
+        </div>
+      </div>
+      <br>
+      <div class="field">
+        <label class="label">Password</label>
+        <div class="control">
+          <input class="input" type="password" placeholder="********">
+        </div>
+      </div>
+      <br>
+      <button class="button is-primary">Sign in</button>
+    </form>
+    <p>New User? <a href="/signup">Sign-Up Here</a></p>
 
-  <div class="field">
-    <label class="label">Password</label>
-    <div class="control">
-      <input class="input" type="password" placeholder="********">
-    </div>
   </div>
-
-  <button class="button is-primary">Sign in</button>
-</form>
-</div> 
+</div>
