--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,12 @@
-<H1>THIS IS THE HOMEPAGE </H1>
-
-{{#each categories as |category|}}
-    <div class='dish col-md-5'>
-      <p>
-        {{category.id}}.
-        {{category.name}}
-      </p>
+<div class="item-cards-container">
+  {{#each categories as |category|}}
+  <a href="/category/{{category.id}}">
+  <div class="item-card">
+    <img src="/images/{{category.filename}}" alt="{{category.name}}" style="width:100%">
+    <div class="container">
+      <h4><b>{{category.name}}e</b></h4>
     </div>
+  </div>
+  </a>
   {{/each}}
+</div>
