--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 <body>
     <header>
 
-        <h1 id="logo"><a href="#">Nik Nak</a></h1>
+        <h1 id="logo"><a href="/">Nik Nak</a></h1>
         <img id="logo-image" src="/images/NIkNak_Logo.png" alt="Shopping bag logo">
 
         <div>
