--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,26 +1,32 @@
-<div class="container">
-  <form class="box">
-    <div class="field">
-      <label class="label">Email</label>
-      <div class="control">
-        <input class="input" type="email" placeholder="e.g. alex@example.com">
+<div class="item-cards-container">
+  <div class="">
+    <h1 class="title is-1">Sign Up</h1>
+    <br>
+    <form class="box">
+      <div class="field">
+        <label class="label">Email</label>
+        <div class="control">
+          <input class="input" type="email" placeholder="e.g. alex@example.com">
+        </div>
       </div>
-    </div>
-
-    <div class="field">
-      <label class="label">Password</label>
-      <div class="control">
-        <input class="input" type="password" placeholder="********">
+      <br>
+      <div class="field">
+        <label class="label">Password</label>
+        <div class="control">
+          <input class="input" type="password" placeholder="********">
+        </div>
       </div>
-    </div>
-    <div class="field">
-      <label class="label">Please confirm Password</label>
-      <div class="control">
-        <input class="input" type="password" placeholder="********">
+      <br>
+      <div class="field">
+        <label class="label">Please confirm Password</label>
+        <div class="control">
+          <input class="input" type="password" placeholder="********">
+        </div>
       </div>
-    </div>
+      <br>
 
+      <button class="button is-primary">Sign-Up</button>
+    </form>
 
-    <button class="button is-primary">Sign-Up</button>
-  </form>
+  </div>
 </div>
