--- a/views/Cart.handlebars
+++ b/views/Cart.handlebars
@@ -1,10 +1,12 @@
+<script src="../public/js/cart-details.js"></script>
+<script id="cartDetail" type="text/x-handlebars-template">
 {{> cart-details }}
 {{#each cartItems as |cartItem|}}
 {{> cart-details}}
 {{/each}}
-<button minus>
+<button id="minus-button">-</button>
 <span>{{cart.count}} </span>
-<button plus>
+<button id="plus-button">+</button>
   {{else}}
   <p>There are no items in your cart.</p>
   {{/if }}
@@ -19,3 +21,4 @@
     </div>
   </div>
 </div>
+</script>
