--- a/views/productView.handlebars
+++ b/views/productView.handlebars
@@ -8,7 +8,7 @@
         </div>
         <div class="add-to-cart">
             <button class="custom-button"><i>-</i></button>
-            <span>{{qty.count}}</span>
+            <span>1</span>
             <button class="custom-button"><i>+</i></button>
             <span><p> {{product.price}}</p></span>
             <button class="custom-button"><i>Add to Cart</i></button>
