--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
   <div class="item-card">
     <img src="/images/{{category.filename}}" alt="{{category.name}}" style="width:100%">
     <div class="container">
-      <h4><b>{{category.name}}e</b></h4>
+      <h4 class = "category-name"><b>{{category.name}}</b></h4>
     </div>
   </div>
   </a>
