removed the login check for general browsing. Added log in check with cart api and cart view

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
             <input class="search-bar" type="text" placeholder="Search for Anything " size="200" height="50">
             <button id="search-button" type="button">Search</button>
             <span id="signin"><a href="/login">Sign-in </a></span>
-            <span id="Cart"><a href="#">Cart </a></span>
+            <span id="Cart"><a href="/cart">Cart </a></span>
         </div>
 
     </header>
