--- a/views/partials/cart-details.handlebars
+++ b/views/partials/cart-details.handlebars
@@ -12,10 +12,9 @@
           <div class="caption">
             <h3>{{Product.name}}</h3>
             <p class="price">${{Product.price}}</p>
-            <button><i> plus</i></button>
-            <span>{{qty.count}}</span>
-            <button><i>minus</i></button>
-            <p> {{product.total}}</p>
+            <button id="minus-button">-</button>
+         <span>{{cart.count}} </span>
+          <button id="plus-button">+</button>
           </div>
         </div>
       </div>
