--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,18 +2,18 @@
   <div class="">
     <h1 class="title is-1">Sign Up</h1>
     <br>
-    <form class="box">
+    <form class="signup-form">
       <div class="field">
         <label class="label">Email</label>
         <div class="control">
-          <input class="input" type="email" placeholder="e.g. alex@example.com">
+          <input id="email-signup" class="input" type="email" placeholder="e.g. alex@example.com">
         </div>
       </div>
       <br>
       <div class="field">
         <label class="label">Password</label>
         <div class="control">
-          <input class="input" type="password" placeholder="********">
+          <input id="password-signup" class="input" type="password" placeholder="********">
         </div>
       </div>
       <br>
@@ -30,3 +30,4 @@
 
   </div>
 </div>
+<script src="../public/js/userForms.js"> </script>
