--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,10 +17,10 @@
         </div>
       </div>
       <br>
-      <button class="button is-primary">Sign in</button>
+      <button class="button is-primary" type="submit">Sign in</button>
     </form>
     <p>New User? <a href="/signup">Sign-Up Here</a></p>
 
   </div>
 </div>
-<script src="../public/js/userForms.js"> </script>
+<script src="/js/userForms.js"> </script>
