--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -25,9 +25,9 @@
       </div>
       <br>
 
-      <button class="button is-primary">Sign-Up</button>
+      <button class="button is-primary" type="submit">Sign-Up</button>
     </form>
 
   </div>
 </div>
-<script src="../public/js/userForms.js"> </script>
+<script src="/js/signup.js"> </script>
