Working on + - buttons. Code does not work

--- a/views/Cart.handlebars
+++ b/views/Cart.handlebars
@@ -1,5 +1,7 @@
-<script src="/js/cart-details.js"></script>
-{{#if cart}}
+
+
+{{cart.id}}
+{{#if cart.products}}
 {{#each cart.products as |product|}}
 {{> cart-details}}
 {{/each}}
