--- a/views/partials/cart-details.handlebars
+++ b/views/partials/cart-details.handlebars
@@ -12,12 +12,14 @@
           <div class="caption">
             <h3>{{name}}</h3>
             <p class="price">${{price}}</p>
-            <button id="minus-button">-</button>
+            <button id="minus-button" data-productID="{{id}}">-</button>
          <span>{{qty}} </span>
-          <button id="plus-button">+</button>
+          <button id="plus-button" data-productID="{{id}}">+</button>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="/js/cartManagement.js"></script>
