--- a/views/partials/product-card.handlebars
+++ b/views/partials/product-card.handlebars
@@ -9,7 +9,9 @@
     </div>
   </a>
   <div>
-     <button class="custom-button"><i>-</i></button>
+     <button id="minus-button" class="custom-button" data-productid="{{id}}"><i>-</i></button>
      <span>{{qty.count}}</span>
-     <button class="custom-button"><i>+</i></button>
+     <button id="plus-button" class="custom-button" data-productid="{{id}}"><i>+</i></button>
   </div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="/js/cartManagement.js"></script>
