--- a/views/productView.handlebars
+++ b/views/productView.handlebars
@@ -7,9 +7,9 @@
             </div>
         </div>
         <div class="add-to-cart">
-            <button class="custom-button"><i>-</i></button>
+            <button id="minus-button" data-productID="{{product.id}}" class="custom-button"><i>-</i></button>
             <span>1</span>
-            <button class="custom-button"><i>+</i></button>
+            <button id="plus-button" class="custom-button" data-productID="{{product.id}}"><i>+</i></button>
             <span><p> {{product.price}}</p></span>
             <button class="custom-button"><i>Add to Cart</i></button>
         </div>
@@ -23,3 +23,5 @@
         </div>
         
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="/js/cartManagement.js"></script>
