--- a/views/productView.handlebars
+++ b/views/productView.handlebars
@@ -6,12 +6,14 @@
                 {{product.description}}
             </div>
         </div>
-        <div class="add-to-cart">
-            <button class="custom-button"><i>-</i></button>
-            <span>1</span>
-            <button class="custom-button"><i>+</i></button>
+        <div class="box">
+            <article class="media">
+            <button id="minus-button"><i>-</i></button>
+            <p>1</p>
+            <button id="plus-button"><i>+</i></button>
             <span><p> {{product.price}}</p></span>
-            <button class="custom-button"><i>Add to Cart</i></button>
+            <button id="custom-button"><i>Add to Cart</i></button>
+            </article>
         </div>
         <div class="comment-container">
         <form action=""></form>
