--- a/public/css/simple.css
+++ b/public/css/simple.css
@@ -40,7 +40,9 @@ header{
 
 .custom-button{
     background-color: #FE654F ;
-    border: 1px solid#FE654F;
+    /* display: flex; */
+    /* flex-wrap:inline-flex; */
+    border: 1px;
     padding: 12px;
     border-radius: 5px;
 }
@@ -121,9 +123,9 @@ nav{
 .item-cards-container{
     margin:10px;
     display: flex;
-    flex-direction: row;
+    /* flex-direction: row; */
     flex-wrap: wrap;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-around;
 }
 .item-card{
@@ -131,7 +133,7 @@ nav{
     height:auto;
     max-width: 100%;
     max-height: 100%;
-    background-color: white;
+    background-color: whitesmoke;
     border-radius: 5px;
 }
 .product-img{
@@ -139,14 +141,14 @@ nav{
     justify-content: center;
     align-items: center;
 }
-.item-card > img{
+/* .item-card > img{
     width: 200px;
     height:200px;
 }
 .product-img >img{
     width: 250px;
     height:250px;
-}
+} */
 .add-to-cart{
     display:flex;
     justify-content: center;
