--- a/views/partials/product-card.handlebars
+++ b/views/partials/product-card.handlebars
@@ -4,19 +4,21 @@
       <article class="media">
         <div class="media-left">
       <figure class="image is-256x256">
-        <img  class="is-rounded" src="/images/{{filename}}" alt="{{description}}">
+        <img  src="/images/{{filename}}" alt="{{description}}">
         </figure>
         
     </div>
     <div class= "product-info" >
+       <div class="content is-normal">
         <span>{{name}}</span>
         <span>{{price}}</span>
     </div>
   </a>
-  <div>
+  <div class="">
      <button class="custom-button"><i>-</i></button>
      <span>{{qty.count}}</span>
      <button class="custom-button"><i>+</i></button>
+     </div>
   </div>
   </div>
   </article>
