--- a/views/productList.handlebars
+++ b/views/productList.handlebars
@@ -1,4 +1,4 @@
-<div>
+<div class="product-list">
     <h2>{{category.name}}</h2>
     <div class="item-cards-container">
     {{#each category.products as |product|}}
