--- a/public/css/simple.css
+++ b/public/css/simple.css
@@ -21,7 +21,7 @@ header{
     justify-content: space-between;
     align-items: center;
     flex-wrap: nowrap;
-    position: relative;
+    /*position: relative;*/
 }
 
 .search-bar{
@@ -48,6 +48,19 @@ header{
     cursor: pointer;
     background-color:#803327; 
     border: 1px solid#803327
+}
+
+#plus,#minus{  
+    height:5px;
+    margin:10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#plus> i,#minus > i{  
+    font-size: 24px;
 }
 
 #signin a{
@@ -79,7 +92,10 @@ nav{
     color:black;
     font-size: 40px;
     font-style: italic;
-    padding: 10px 0px 10px 10px;
+    padding: 10px;
+    /*position:fixed;*/
+    width:175px;
+   /* border: 1px solid green;*/
     
 
 }
@@ -92,8 +108,24 @@ nav{
     color: #FE654F;
 }
 
+@keyframes shake{
+    0% {transform: rotate(0deg);}
+    33% {transform: rotate(45deg);}
+    66% {transform: rotate(-45deg);}
+    100% {transform: rotate(0deg);}
+}
 #logo-image{
-    margin:10px 10px 10px -50px;
+    transform: rotate(0deg);
+    transition: transform .2s;
+
+}
+
+#logo-image:hover{
+    /*transform: rotate(45deg);
+    transform: rotate(-45deg);*/
+    animation-name: shake;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
 }
 
 .Nav-Link {
@@ -112,11 +144,11 @@ nav{
     color: #3E5376;
 }
 
-.carousel{
+/*.carousel{
     background-color: white;
     width: 100vw;
     height: 50vh;
-}
+}*/
 
 .item-cards-container{
     margin:10px;
@@ -131,6 +163,7 @@ nav{
     height:200px;
     background-color: white;
     border-radius: 5px;
+    margin:30px 10px 10px 10px;
 }
 .product-img{
     display:flex;
@@ -140,15 +173,50 @@ nav{
 .item-card > img{
     width: 200px;
     height:200px;
+    border-radius: 5px;
 }
 .product-img >img{
     width: 250px;
     height:250px;
+    margin-right:50px;
+    
 }
-.add-to-cart{
+.product-container{
+    margin:10px;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.product{
+    text-decoration: none; 
+}
+.overlay{
+   /* border: 2px solid green;*/
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    z-index:10;
+    overflow: hidden;
+}
+.overlay:hover,
+.overlay:focus{
+    background-color:rgba(0, 0, 0, 0.3);
+}
+
+.product-info{
+    color:black;
+}
+
+
+.cart-options{
     display:flex;
     justify-content: center;
     align-items: center;
+}
+#add-to-cart{
+    margin:10px;
 }
 .comment-container{
     text-align: center;
@@ -156,6 +224,20 @@ nav{
 }
 
 .category-name{
-    color:#283845;
+    color:black;
     text-decoration: none;
+}
+.product-description{
+    background-color:white;
+    height:200px;
+    width:600px;
+    padding:10px;
+    border-radius: 5px;
+}
+.product-list {
+    text-align: center;
+}
+.product-list > h2 {
+   margin:10px;
+   font-size: 32px;
 }
