--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,15 +12,15 @@
 
 <body>
     <header>
-
+        
         <h1 id="logo"><a href="/">Nik Nak</a></h1>
-        <img id="logo-image" src="/images/NIkNak_Logo.png" alt="Shopping bag logo">
-
+        <a href="/"><img id="logo-image" src="/images/NIkNak_Logo.png" alt="Shopping bag logo">
+        </a>
         <div>
             <input class="search-bar" type="text" placeholder="Search for Anything " size="200" height="50">
-            <button id="search-button" type="button">Search</button>
+            <button id="search-button" class="custom-button" type="button">Search</button>
             <span id="signin"><a href="/login">Sign-in </a></span>
-            <span id="Cart"><a href="/cart">Cart </a></span>
+            <span id="Cart"><a href="/cart">Cart </a></span> <span id="cart-quantity"></span>
         </div>
 
     </header>
@@ -42,5 +42,4 @@
         {{{body}}}
     <footer></footer>
 </body>
-
 </html>
