--- a/views/partials/product-card.handlebars
+++ b/views/partials/product-card.handlebars
@@ -9,7 +9,7 @@
         
     </div>
     <div class= "product-info" >
-       <div class="content is-normal">
+       <div class="content is-large">
         <span>{{name}}</span>
         <span>{{price}}</span>
     </div>
