Adding and removing product to the cart works

--- a/views/productView.handlebars
+++ b/views/productView.handlebars
@@ -7,9 +7,9 @@
             </div>
         </div>
         <div class="add-to-cart">
-            <button id="minus-button" data-productID="{{product.id}}" class="custom-button"><i>-</i></button>
+            <button data-productID="{{product.id}}" class="custom-button minus-button"><i>-</i></button>
             <span>1</span>
-            <button id="plus-button" class="custom-button" data-productID="{{product.id}}"><i>+</i></button>
+            <button class="custom-button plus-button" data-productID="{{product.id}}"><i>+</i></button>
             <span><p> {{product.price}}</p></span>
             <button class="custom-button"><i>Add to Cart</i></button>
         </div>
