--- a/views/partials/cart-details.handlebars
+++ b/views/partials/cart-details.handlebars
@@ -1,10 +1,6 @@
 <div class="container">
   <div class="notification is-primary">
-    {{#if product}}
-
-    {{#grouped_each 4 product}}
     <div class="row cart-row">
-      {{#each this}}
       <div class="col-md-3 col-sm-6 product">
         <div class="thumbnail">
           <img src="{{img}}" alt="{{name}}">
@@ -12,14 +8,16 @@
           <div class="caption">
             <h3>{{name}}</h3>
             <p class="price">${{price}}</p>
-            <button id="minus-button" data-productID="{{id}}">-</button>
-         <span>{{qty}} </span>
-          <button id="plus-button" data-productID="{{id}}">+</button>
+            <button class="minus-button" data-productID="{{id}}">-</button>
+            <span>{{qty}} </span>
+            <button class="plus-button" data-productID="{{id}}">+</button>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="/js/cartManagement.js"></script>
