--- a/views/partials/product-card.handlebars
+++ b/views/partials/product-card.handlebars
@@ -14,14 +14,14 @@
     </div>
   </a>
   <div>
-     <button id="minus-button" class="custom-button" data-productid="{{id}}"><i>-</i></button>
-     <span>{{qty.count}}</span>
-     <button id="plus-button" class="custom-button" data-productid="{{id}}"><i>+</i></button>
+     <button class="custom-button minus-button" data-productid="{{id}}"><i>-</i></button>
+     <span>{{qty}}</span>
+     <button class="custom-button plus-button" data-productid="{{id}}"><i>+</i></button>
   </div>
 
   </div>
   </article>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="/js/cartManagement.js"></script>
+
 
