--- a/public/css/simple.css
+++ b/public/css/simple.css
@@ -21,7 +21,6 @@ header{
     justify-content: space-between;
     align-items: center;
     flex-wrap: nowrap;
-    /*position: relative;*/
 }
 
 .search-bar{
@@ -37,7 +36,11 @@ header{
     box-shadow: 0px 0px 10px #3E5376 ;
     outline: none;
 }
-
+#cart-quantity{
+    color:#FE654F;
+    font-size: 16px;
+    font-weight: bold;
+}
 .custom-button{
     background-color: #FE654F ;
     border: 1px solid#FE654F;
@@ -93,9 +96,8 @@ nav{
     font-size: 40px;
     font-style: italic;
     padding: 10px;
-    /*position:fixed;*/
     width:175px;
-   /* border: 1px solid green;*/
+   
     
 
 }
@@ -121,8 +123,6 @@ nav{
 }
 
 #logo-image:hover{
-    /*transform: rotate(45deg);
-    transform: rotate(-45deg);*/
     animation-name: shake;
     animation-duration: 1s;
     animation-iteration-count: infinite;
@@ -143,12 +143,6 @@ nav{
 .Nav-Link :hover{
     color: #3E5376;
 }
-
-/*.carousel{
-    background-color: white;
-    width: 100vw;
-    height: 50vh;
-}*/
 
 .item-cards-container{
     margin:10px;
@@ -193,7 +187,6 @@ nav{
     text-decoration: none; 
 }
 .overlay{
-   /* border: 2px solid green;*/
     width: 200px;
     height: 200px;
     position: absolute;
