updated links for main layout

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,12 +37,12 @@
         {{!-- <div class="container"> --}}
              <div class="text is-capitalized is-underlined has-text-centered">
             <ul>
-                <li class="Nav-Link"><a href="#">Home & Bath</a></li>
-                <li class="Nav-Link"><a href="#">Electronics</a></li>
-                <li class="Nav-Link"><a href="#">Art & Collectibles</a></li>
-                <li class="Nav-Link"><a href="#">Toys & Entertainment</a></li>
-                <li class="Nav-Link"><a href="#">Clothing & Accessories</a></li>
-                <li class="Nav-Link"><a href="#">Tools & Equipment</a></li>
+                <li class="Nav-Link"><a href="/category/1">Home & Bath</a></li>
+                <li class="Nav-Link"><a href="/category/2">Electronics</a></li>
+                <li class="Nav-Link"><a href="/category/3">Art & Collectibles</a></li>
+                <li class="Nav-Link"><a href="/category/4">Toys & Entertainment</a></li>
+                <li class="Nav-Link"><a href="/category/5">Clothing & Accessories</a></li>
+                <li class="Nav-Link"><a href="/category/6">Tools & Equipment</a></li>
             </ul>
              </div>
         {{!-- </div> --}}
