Corrected issues that happened during a pull request. Some data attributes got deleted

--- a/views/partials/product-card.handlebars
+++ b/views/partials/product-card.handlebars
@@ -11,9 +11,9 @@
     </div>
   </a>
   <div class="cart-options">
-     <button class="custom-button minus-button" id="minus"><i>-</i></button>
+     <button class="custom-button minus-button" id="minus" data-productID="{{id}}"><i>-</i></button>
      <span>{{qty.count}}</span>
-     <button class="custom-button plus-button" id="plus"><i>+</i></button>
+     <button class="custom-button plus-button" id="plus" data-productID="{{id}}"><i>+</i></button>
   </div>
 </div>
 
