--- a/views/Cart.handlebars
+++ b/views/Cart.handlebars
@@ -20,3 +20,5 @@
   </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="/js/cartManagement.js"></script>
