--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1 id="logo"><a href="/">Nik Nak</a></h1>
+        <h1 id="logo"><a href="/"><b>Nik Nak</b></a></h1>
         <a href="/"><img id="logo-image" src="/images/NIkNak_Logo.png" alt="Shopping bag logo">
         </a>
         <div>
@@ -30,7 +30,7 @@
     </div>
     <nav>
         {{!-- <div class="container"> --}}
-             <div class="text is-capitalized is-underlined has-text-centered">
+             <div>
             <ul>
                 <li class="Nav-Link"><a href="/category/1">Home & Bath</a></li>
                 <li class="Nav-Link"><a href="/category/2">Electronics</a></li>
