--- a/views/partials/cart-details.handlebars
+++ b/views/partials/cart-details.handlebars
@@ -3,7 +3,10 @@
     <div class="row cart-row">
       <div class="col-md-3 col-sm-6 product">
         <div class="thumbnail">
-          <img src="{{img}}" alt="{{name}}">
+         <div class="product-img">
+            <img src="/images/{{product.filename}}" alt="{{product.description}}">
+          
+            </div>
           </a>
           <div class="caption">
             <h3>{{name}}</h3>
