--- a/views/productView.handlebars
+++ b/views/productView.handlebars
@@ -16,13 +16,11 @@
             <button class="custom-button" id="add-to-cart"><i>Add to Cart</i></button>
         </div>
 
-
         <div class="comment-container">
-        <form action=""></form>
+        <form action="">
             <label for="review"></label>
             <textarea name="review" placeholder="Write a Customer Review" rows="10" cols="100">
             </textarea>
-            
         </form>
         </div> 
     </div>
